<resources>
    <string name="app_name">Restaurant</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="order">To order</string>
    <string name="account">Account</string>
    <string name="map">Map</string>
    <string name="heading1">Fast food</string>
    <string name="heading2">restaurant</string>
    <string name="description_dish">Description:</string>
    <string name="the_weight_dish">Weight:</string>
    <string name="price_dish">Price:</string>
    <string name="description_french_fries">French fries are potato sticks with a cross-section of about 1 cm, fried in a large amount of hot vegetable oil.</string>
    <string name="add_to_card">ADD TO CARD</string>
</resources>