<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/dishBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:contentPaddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dishImage"
                android:layout_width="305dp"
                android:layout_height="256dp"
                android:contentDescription="@string/app_name"
                tools:srcCompat="@drawable/ic_potatofree" />

            <TextView
                android:id="@+id/dishTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/the_weight_dish"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/price_dish"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weightDish"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/priceDish"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/descriptionDish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>