<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".OrderPage">

    <TextView
        android:id="@+id/textView"
        style="@style/TextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/heading1"
        android:textColor="@color/txtColorNameApp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextView"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/heading2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <ImageView
        android:id="@+id/menuBg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="15dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_menu_bg" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="@+id/menuBg"
        app:layout_constraintTop_toTopOf="@+id/menuBg"
        app:layout_constraintVertical_bias="0.419"
        app:srcCompat="@drawable/backet"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="@+id/menuBg"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="@+id/menuBg"
        app:layout_constraintTop_toTopOf="@+id/menuBg"
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@drawable/human" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="@+id/menuBg"
        app:layout_constraintStart_toStartOf="@+id/menuBg"
        app:layout_constraintTop_toTopOf="@+id/menuBg"
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="@+id/menuBg"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="@+id/menuBg"
        app:layout_constraintTop_toTopOf="@+id/menuBg"
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@drawable/map_marker" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="@+id/menuBg"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/menuBg"
        app:layout_constraintTop_toTopOf="@+id/menuBg"
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@drawable/settings" />

    <ListView
        android:id="@+id/orders_list"
        android:layout_width="375dp"
        android:layout_height="490dp"
        app:layout_constraintBottom_toTopOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>