<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:id="@+id/dishPageBackground"
    tools:context=".DishPage">

    <ImageView
        android:id="@+id/dishPageImage"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:transitionName="dishImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_potatofree" />

    <TextView
        android:id="@+id/dishPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dishPageImage" />

    <android.support.v7.widget.CardView
        android:id="@+id/dishBackground"
        android:layout_width="340dp"
        android:layout_height="115dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/the_weight_dish"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/price_dish"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dishPageWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dishPagePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"

                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pageDescriptionDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/description_dish"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/dishPageDiscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dishBackground" />

    <ImageButton
        android:id="@+id/addToCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:onClick="addToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dishPageDiscription"
        app:srcCompat="@drawable/ic_addtocard" />

    <TextView
        android:id="@+id/textView5"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="@+id/addToCard"
        app:layout_constraintEnd_toEndOf="@+id/addToCard"
        app:layout_constraintStart_toStartOf="@+id/addToCard"
        app:layout_constraintTop_toTopOf="@+id/addToCard" />

    <ImageView
        android:id="@+id/menuBg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="15dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_menu_bg" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="@+id/menuBg"
        app:layout_constraintTop_toTopOf="@+id/menuBg"
        app:layout_constraintVertical_bias="0.419"
        app:srcCompat="@drawable/backet"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="@+id/menuBg"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="@+id/menuBg"
        app:layout_constraintTop_toTopOf="@+id/menuBg"
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@drawable/human" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="@+id/menuBg"
        app:layout_constraintStart_toStartOf="@+id/menuBg"
        app:layout_constraintTop_toTopOf="@+id/menuBg"
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="@+id/menuBg"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="@+id/menuBg"
        app:layout_constraintTop_toTopOf="@+id/menuBg"
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@drawable/map_marker" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/menuBg"
        app:layout_constraintEnd_toEndOf="@+id/menuBg"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/menuBg"
        app:layout_constraintTop_toTopOf="@+id/menuBg"
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@drawable/settings" />

</android.support.constraint.ConstraintLayout>